@@ -57,13 +57,11 @@ namespace Mono.Addins
 			// Look for add-ins in the hosts directory and in the default
 			// addins directory
 			addinDirs = new StringCollection ();
-			addinDirs.Add (database.HostsPath);
 			addinDirs.Add (DefaultAddinsFolder);
 			
 			// Get the domain corresponding to the startup folder
 			if (startupDirectory != null && startupDirectory.Length > 0) {
 				this.startupDirectory = startupDirectory;
-				addinDirs.Add (startupDirectory);
 				currentDomain = database.GetFolderDomain (null, startupDirectory);
 			} else
 				currentDomain = AddinDatabase.GlobalDomain;
@@ -83,7 +81,7 @@ namespace Mono.Addins
 			else
 				baseDir = "/etc";
 			
-			reg.AddinDirectories.Add (Path.Combine (baseDir, "mono.addins"));
+			reg.GlobalAddinDirectories.Add (Path.Combine (baseDir, "mono.addins"));
 			return reg;
 		}
 		
@@ -110,28 +108,38 @@ namespace Mono.Addins
 		
 		public Addin GetAddin (string id)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return null;
 			return database.GetInstalledAddin (currentDomain, id);
 		}
 		
 		public Addin GetAddin (string id, bool exactVersionMatch)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return null;
 			return database.GetInstalledAddin (currentDomain, id, exactVersionMatch);
 		}
 		
 		public Addin[] GetAddins ()
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return new Addin [0];
 			ArrayList list = database.GetInstalledAddins (currentDomain, AddinType.Addin);
 			return (Addin[]) list.ToArray (typeof(Addin));
 		}
 		
 		public Addin[] GetAddinRoots ()
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return new Addin [0];
 			ArrayList list = database.GetInstalledAddins (currentDomain, AddinType.Root);
 			return (Addin[]) list.ToArray (typeof(Addin));
 		}
 		
 		public AddinDescription GetAddinDescription (IProgressStatus progressStatus, string file)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return null;
 			string outFile = Path.GetTempFileName ();
 			try {
 				database.ParseAddin (progressStatus, currentDomain, file, outFile, false);
@@ -160,6 +168,8 @@ namespace Mono.Addins
 		
 		public AddinDescription ReadAddinManifestFile (string file)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return null;
 			AddinDescription desc = AddinDescription.Read (file);
 			desc.OwnerDatabase = database;
 			desc.Domain = currentDomain;
@@ -168,16 +178,22 @@ namespace Mono.Addins
 		
 		public bool IsAddinEnabled (string id)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return false;
 			return database.IsAddinEnabled (currentDomain, id);
 		}
 		
 		public void EnableAddin (string id)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return;
 			database.EnableAddin (currentDomain, id, true);
 		}
 		
 		public void DisableAddin (string id)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return;
 			database.DisableAddin (currentDomain, id);
 		}
 		
@@ -209,6 +225,8 @@ namespace Mono.Addins
 		
 		internal Addin GetAddinForHostAssembly (string filePath)
 		{
+			if (currentDomain == AddinDatabase.UnknownDomain)
+				return null;
 			return database.GetAddinForHostAssembly (currentDomain, filePath);
 		}
 		
@@ -231,7 +249,7 @@ namespace Mono.Addins
 			get { return Path.Combine (basePath, "addins"); }
 		}
 		
-		internal StringCollection AddinDirectories {
+		internal StringCollection GlobalAddinDirectories {
 			get { return addinDirs; }
 		}
 
@@ -239,11 +257,6 @@ namespace Mono.Addins
 			get {
 				return startupDirectory;
 			}
-		}
-		
-		public void RegisterAddinRoot (string hostFile)
-		{
-			CreateHostAddinsFile (hostFile);
 		}
 		
 		internal bool CreateHostAddinsFile (string hostFile)
